<resources>
    <string name="app_name">App Store Latest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_media_list">MediaListActivity</string>
    <string name="title_activity_detailed_media">DetailedMediaActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="audio_label">Audio Book</string>
    <string name="books_label">Books</string>
    <string name="ios_label">iOS Apps</string>
    <string name="mac_label">Mac Apps</string>
    <string name="movies_label">Movies</string>
    <string name="itunes_label">iTunes U</string>
    <string name="podcast_label">Podcast</string>
    <string name="tv_label">TV Shows</string>
</resources>
